--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <a href="payment.html">PAYMENT</a>
             <a href="about.html">ABOUT</a>
             <a href="contact.html">CONTACT</a>
+            <a href="LOGIN.html">Login</a>
         </nav>
     </header>
 
@@ -74,3 +75,4 @@
     </footer>
 </body>
 </html>
+
